@@ -1,6 +1,7 @@
 Revision history for Variable-OnDestruct
 
 {{$NEXT}}
+          - Don't copy magic to localized variable
 
 0.04      2020-04-10 23:23:46+02:00 Europe/Amsterdam
         - Don't run destructor in late global destruction
